--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div>
+    <div class="main">
     <div id="root"></div>
     <div id="app"></div>
     </div>
